syntax = "proto3";
package provenance.marker.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/bank/v1beta1/bank.proto";
import "provenance/marker/v1/accessgrant.proto";
import "provenance/marker/v1/si.proto";
import "provenance/marker/v1/marker.proto";

option go_package = "github.com/provenance-io/provenance/x/marker/types";

option java_package        = "io.provenance.marker.v1";
option java_multiple_files = true;

// Msg defines the Marker Msg service.
service Msg {
  // Finalize
  rpc Finalize(MsgFinalizeRequest) returns (MsgFinalizeResponse);
  // Activate
  rpc Activate(MsgActivateRequest) returns (MsgActivateResponse);
  // Cancel
  rpc Cancel(MsgCancelRequest) returns (MsgCancelResponse);
  // Delete
  rpc Delete(MsgDeleteRequest) returns (MsgDeleteResponse);
  // Mint
  rpc Mint(MsgMintRequest) returns (MsgMintResponse);
  // Burn
  rpc Burn(MsgBurnRequest) returns (MsgBurnResponse);
  // AddAccess
  rpc AddAccess(MsgAddAccessRequest) returns (MsgAddAccessResponse);
  // DeleteAccess
  rpc DeleteAccess(MsgDeleteAccessRequest) returns (MsgDeleteAccessResponse);
  // Withdraw
  rpc Withdraw(MsgWithdrawRequest) returns (MsgWithdrawResponse);
  // AddMarker
  rpc AddMarker(MsgAddMarkerRequest) returns (MsgAddMarkerResponse);
  // Transfer marker denominated coin between accounts
  rpc Transfer(MsgTransferRequest) returns (MsgTransferResponse);
  // Allows Denom Metadata (see bank module) to be set for the Marker's Denom.
  // You must either provide the metadata OR all three of description, base_name, and available_prefixes.
  // Providing the metadata along with one or more of those fields will result in an error.
  // The administrator must be provided in either case.
  rpc SetDenomMetadata(MsgSetDenomMetadataRequest) returns (MsgSetDenomMetadataResponse);
}

// MsgAddMarkerRequest defines the Msg/AddMarker request type
message MsgAddMarkerRequest {
  cosmos.base.v1beta1.Coin amount = 1
      [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"];
  string               manager                  = 3;
  string               from_address             = 4;
  MarkerStatus         status                   = 5;
  MarkerType           marker_type              = 6;
  repeated AccessGrant access_list              = 7 [(gogoproto.nullable) = false];
  bool                 supply_fixed             = 8;
  bool                 allow_governance_control = 9;
}

// MsgAddMarkerResponse defines the Msg/AddMarker response type
message MsgAddMarkerResponse {}

// MsgAddAccessRequest defines the Msg/AddAccess request type
message MsgAddAccessRequest {
  string               denom         = 1;
  string               administrator = 2;
  repeated AccessGrant access        = 3 [(gogoproto.nullable) = false];
}

// MsgAddAccessResponse defines the Msg/AddAccess response type
message MsgAddAccessResponse {}

// MsgDeleteAccessRequest defines the Msg/DeleteAccess request type
message MsgDeleteAccessRequest {
  string denom           = 1;
  string administrator   = 2;
  string removed_address = 3;
}
// MsgDeleteAccessResponse defines the Msg/DeleteAccess response type
message MsgDeleteAccessResponse {}

// MsgFinalizeRequest defines the Msg/Finalize request type
message MsgFinalizeRequest {
  string denom         = 1;
  string administrator = 2;
}
// MsgFinalizeResponse defines the Msg/Finalize response type
message MsgFinalizeResponse {}

// MsgActivateRequest defines the Msg/Activate request type
message MsgActivateRequest {
  string denom         = 1;
  string administrator = 2;
}
// MsgActivateResponse defines the Msg/Activate response type
message MsgActivateResponse {}

// MsgCancelRequest defines the Msg/Cancel request type
message MsgCancelRequest {
  string denom         = 1;
  string administrator = 2;
}
// MsgCancelResponse defines the Msg/Cancel response type
message MsgCancelResponse {}

// MsgDeleteRequest defines the Msg/Delete request type
message MsgDeleteRequest {
  string denom         = 1;
  string administrator = 2;
}
// MsgDeleteResponse defines the Msg/Delete response type
message MsgDeleteResponse {}

// MsgMintRequest defines the Msg/Mint request type
message MsgMintRequest {
  cosmos.base.v1beta1.Coin amount = 1
      [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"];
  string administrator = 2;
}
// MsgMintResponse defines the Msg/Mint response type
message MsgMintResponse {}

// MsgBurnRequest defines the Msg/Burn request type
message MsgBurnRequest {
  cosmos.base.v1beta1.Coin amount = 1
      [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"];
  string administrator = 2;
}
// MsgBurnResponse defines the Msg/Burn response type
message MsgBurnResponse {}

// MsgWithdrawRequest defines the Msg/Withdraw request type
message MsgWithdrawRequest {
  string   denom                           = 1;
  string   administrator                   = 2;
  string   to_address                      = 3;
  repeated cosmos.base.v1beta1.Coin amount = 4
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
}
// MsgWithdrawResponse defines the Msg/Withdraw response type
message MsgWithdrawResponse {}

// MsgTransferRequest defines the Msg/Transfer request type
message MsgTransferRequest {
  cosmos.base.v1beta1.Coin amount = 1
      [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"];
  string administrator = 3;
  string from_address  = 4;
  string to_address    = 5;
}

// MsgTransferResponse defines the Msg/Transfer response type
message MsgTransferResponse {}

// MsgSetDenomMetadataRequest defines the Msg/SetDenomMetadata request type
message MsgSetDenomMetadataRequest {
  // metadata is the optional raw metadata structure to be stored.
  // If not provided, then the description, base_name, and available_prefixes must be provided.
  // Those will be used to define the appropriate denom metadata structure.
  //
  // If provided, it must conform to the following restrictions:
  // * A DenomUnit must exist with a denom field equal to the base field, and an exponent of 0 (zero).
  // * A DenomUnit must exist with either a denom field equal to the display field, or an alias equal to the display
  // field.
  // * A DenomUnit must exist with an unprefixed denom field and it must not have any aliases.
  // * The denom field of all DenomUnits must be the long SI prefix + unprefixed denom, e.g. "nanohash" (except the
  // DenomUnit for the un-prefixed entry).
  // * The aliases of all DenomUnits must be a single entry of the short SI Prefix + unprefixed denom, e.g. "nhash"
  // (except the DenomUnit for the un-prefixed entry).
  // * The exponent of all DenomUnits must be the exponent of the SI prefix on its denom minus the exponent of the SI
  // prefix on the base DenomUnit. For example, if the base is "nanohash", it's SI prefix exponent is -9 (and the
  // DenomUnit for it has an exponent of 0). A DenomUnit for "microhash" has an SI prefix exponent of -6. So the
  // exponent of the "microhash" DenomUnit is -6 - -9 = 3. A DenomUnit for "hash" must have an exponent of 0 - -9 = 9,
  // and a DenomUnit for "kilohash" must have an exponent of 3 - -9 = 12.
  cosmos.bank.v1beta1.Metadata metadata = 1
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/x/bank/types.Metadata"];
  // administrator is the address of the administrator making this request.
  string administrator = 2;
  // description is A description of this denomination.
  // It is used to populate the Metadata.description field.
  string description = 3;
  // base_name is the root of the name of this denomination. SI Prefix strings will be added to this to create the
  // desired denom units.
  string base_name = 4;
  // available_prefixes is the list of available SI Prefixes for this denomination.
  // At least one must be supplied.
  // The smallest will be considered the base and be given an exponent of zero in its DenomUnit.
  repeated SIPrefix available_prefixes = 5;
}

// MsgSetDenomMetadataResponse defines the Msg/SetDenomMetadata response type
message MsgSetDenomMetadataResponse {}
